--- a/src/app/user/components/user-form/user-form.component.html
+++ b/src/app/user/components/user-form/user-form.component.html
@@ -3,7 +3,7 @@
             <div class="input-name">
                 <label for="txtName">Nome</label>
                 <input type="text" id="txtName" name="txtName" [(ngModel)]="user.name">
-                <td><button (click)="filtrarNome(user.name)"><img src="../../../../assets/14309.png" width="15px"></button></td>
+                <td><button (click)="getUsersByName(user.name)"><img src="../../../../assets/14309.png" width="15px"></button></td>
             </div>
             <div class="input-email">
                 <hr>
