--- a/src/app/user/components/user-table/user-table.component.scss
+++ b/src/app/user/components/user-table/user-table.component.scss
@@ -1,12 +1,37 @@
-*{
+* {
     font-family: sans-serif;
-}
+  }
 
-.cabecalho{
-    background-color: rgb(211, 56, 56);
-    color: white;
-}
-
-table{
+  table {
     margin-top: 50px;
-}
+    background-color: rgb(234, 234, 234);
+    width: 100%;
+    border-radius: 5px;
+    table-layout: fixed;
+    overflow-y: scroll;
+  }
+
+  .cabecalho {
+    background-color: rgb(194, 194, 194);
+    color: white;
+    font-weight: bold;
+  }
+
+  .titulo {
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px;
+  }
+
+  td {
+    padding: 10px;
+    width: 100%;
+  }
+
+  button {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+  }
+
