--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -1,1 +1,5 @@
-<a routerLink="/users">Usuários</a>
+<a routerLink="/user">Usuário</a>
+<a routerLink="/country">País</a>
+<a routerLink="/track">Pista</a>
+
+
