Commit home noturno, enfeitando as telinhas :)

--- a/src/app/country/components/country-table/country-table.component.html
+++ b/src/app/country/components/country-table/country-table.component.html
@@ -1,4 +1,5 @@
-<table [cellPadding]="0" [cellSpacing]="0">
+<div class="table-container">
+  <table [cellPadding]="0" [cellSpacing]="0">
     <tr class="titulo">
       <td colspan="2">Países</td>
     </tr>
@@ -17,4 +18,6 @@
           </button>
       </td>
     </tr>
-</table>
+  </table>
+</div>
+
