--- a/src/app/country/components/country/country.component.html
+++ b/src/app/country/components/country/country.component.html
@@ -1,3 +1,6 @@
-<h1>País</h1>
-<app-country-form></app-country-form>
-<app-country-table></app-country-table>
+<div class="container">
+    <h1>País</h1>
+    <app-country-form></app-country-form>
+    <app-country-table></app-country-table>
+</div>
+
