--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -1,5 +1,16 @@
-<a routerLink="/user">Usuário</a>
-<a routerLink="/country">País</a>
-<a routerLink="/track">Pista</a>
+<div class="container">
+    <div>
+        <button routerLink="/user">Usuário</button>
+    </div>
+    <div>
+        <button routerLink="/country">País</button>
+    </div>
+    <div>
+        <button routerLink="/track">Pista</button>
+    </div>
+</div>
+    
+
+
 
 
