--- a/src/app/track/components/track-form/track-form.component.html
+++ b/src/app/track/components/track-form/track-form.component.html
@@ -14,9 +14,9 @@
                 <hr>
                 <label for="txtPais">País</label>
                 <select>
-                    <option value="opcao1"></option>
-                    <option value="opcao2">Opção 2</option>
-                    <option value="opcao3">Opção 3</option>
+                    <option value="opcao1">Brasil</option>
+                    <option value="opcao2">Argentina</option>
+                    <option value="opcao3">Chile</option>
                 </select>
             </div>
             <div class="salvar">
