--- a/src/app/user/components/user-table/user-table.component.html
+++ b/src/app/user/components/user-table/user-table.component.html
@@ -1,4 +1,5 @@
-<table [cellPadding]="0" [cellSpacing]="0">
+<div class="table-container">
+  <table [cellPadding]="0" [cellSpacing]="0">
     <tr class="titulo">
       <td colspan="4">Usuários</td>
     </tr>
@@ -21,4 +22,6 @@
           </button>
       </td>
     </tr>
-</table>
+  </table>
+</div>
+
