--- a/src/app/user/components/user/user.component.html
+++ b/src/app/user/components/user/user.component.html
@@ -1,3 +1,5 @@
-<h1>Usuário</h1>
-<app-user-form></app-user-form>
-<app-user-table></app-user-table>
+<div class="container">
+    <h1>Usuário</h1>
+    <app-user-form></app-user-form>
+    <app-user-table></app-user-table>
+</div>
