--- a/src/app/country/components/country-form/country-form.component.scss
+++ b/src/app/country/components/country-form/country-form.component.scss
@@ -4,7 +4,7 @@
 
 .container input{
     border: none;
-    width: 200px;
+    width: 97%;
     outline: 0;
 }
 
@@ -29,12 +29,9 @@
 }
 
 .input-name button {
-    position: absolute;
     background-color: transparent;
     border: none;
     cursor: pointer;
-    right: 30px;
-    top: 130px;
 }
 
   
