--- a/src/app/track/components/track-table/track-table.component.scss
+++ b/src/app/track/components/track-table/track-table.component.scss
@@ -1,13 +1,20 @@
-table {
+.table-container {
     margin-top: 25px;
     background-color: rgb(234, 234, 234);
     width: 100%;
     border-radius: 5px;
-    table-layout: fixed;
-    overflow-y: scroll;
+    max-height: 300px;
+    overflow-y: auto;
 }
-
+  
+table {
+    width: 100%;
+    table-layout: fixed;
+}
+  
 .cabecalho {
+    position: sticky;
+    top: 0;
     background-color: rgb(194, 194, 194);
     color: white;
     font-weight: bold;
