--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -8,6 +8,9 @@
     <div>
         <button routerLink="/track">Pista</button>
     </div>
+    <div>
+        <button routerLink="/championship">Campeonato</button>
+    </div>
 </div>
     
 
