--- a/src/app/menu/components/menu/menu.component.scss
+++ b/src/app/menu/components/menu/menu.component.scss
@@ -1,12 +1,20 @@
 .container {
     display: flex;
     justify-content: end;
-    margin-right: 140px;
-    margin-top: 10px;
+    background-color: rgba(0, 200, 242, 255);
+    width: 100%;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .container div {
     margin-right: 10px;
+}
+
+.container div:last-child {
+    margin-right: 170px;
 }
 
 .container button {
@@ -15,7 +23,7 @@
     text-decoration: none;
     display: inline-block;
     cursor: pointer;
-    width: 70px;
+    width: 95px;
     height: 30px;
     border-radius: 3px;
     background-color: white;
@@ -26,7 +34,7 @@
 .container button:hover{
     background-color: rgba(0,100,242,255);
     border: none;
-    transition: 0.5s;
-    width: 80px;
+    transition: 0.2s;
+    width: 100px;
     color: white;
 }
