--- a/src/app/track/components/track-size-between/track-size-between.component.scss
+++ b/src/app/track/components/track-size-between/track-size-between.component.scss
@@ -1,15 +1,13 @@
 .container {
-    margin-top: 10px;
     position: relative;
-    right: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3px;
-    background-color: rgb(234, 234, 234, 5);
+    background-color: rgb(245, 245, 245);
     border-radius: 10px;
-    left: 900px;
-    width: 20%;
+    box-shadow: 1px 1px 3px;
+    width: 70%;
+    margin-right: 0;
 }
 
 .input-group {
@@ -20,7 +18,7 @@
 
 .input-group input {
     border: none;
-    width: 25%;
+    width: 30%;
     outline: none;
     background-color: transparent ;
     text-align: center;
@@ -34,7 +32,6 @@ button{
     border-radius: 3px;
     background-color: rgba(0,153,242,255);
     color: white;
-    margin-top: 10px;
     border: none;
     cursor: pointer;
 }
