--- a/src/app/track/components/track-size-between/track-size-between.component.html
+++ b/src/app/track/components/track-size-between/track-size-between.component.html
@@ -1,14 +1,11 @@
-<div class="container">
+<!-- <div class="container">
     <div class="titulo">
         <p>Buscar entre tamanhos (Metros)</p>
     </div>
     <div class="input-group">
-        <input type="number">
+        <input type="number" placeholder="De">
         <p>|</p>
-        <input type="number">
-    </div>
-    <div class="confirmar">
-        <button>Buscar</button>
+        <input type="number" placeholder="Até">
     </div>
     <hr>
-</div>
+</div> -->
