--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -11,6 +11,9 @@
     <div>
         <button routerLink="/championship">Campeonato</button>
     </div>
+    <div>
+        <button routerLink="/login">Login</button>
+    </div>
 </div>
     
 
