--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="showMenu" class="container">
     <div>
         <button routerLink="/user">Usuário</button>
     </div>
