fixed up! LOGIN 100%

--- a/src/app/menu/components/menu/menu.component.html
+++ b/src/app/menu/components/menu/menu.component.html
@@ -1,5 +1,8 @@
 <div *ngIf="showMenu" class="container">
     <div>
+        <button routerLink="/">Home</button>
+    </div>
+    <div>
         <button routerLink="/user">Usuário</button>
     </div>
     <div>
@@ -10,9 +13,6 @@
     </div>
     <div>
         <button routerLink="/championship">Campeonato</button>
-    </div>
-    <div>
-        <button routerLink="/login">Login</button>
     </div>
 </div>
     
