--- a/src/app/track/components/track-form/track-form.component.scss
+++ b/src/app/track/components/track-form/track-form.component.scss
@@ -40,6 +40,7 @@
   
 .container .input-size .labels label {
     margin-bottom: 5px;
+    margin-top: 10px;
 }
   
 .container .input-size .labels .label-busca label{
@@ -47,7 +48,7 @@
 }
   
 .container .input-size .labels .label-busca {
-    margin-left: 650px;
+    margin-left: 850px;
 }
   
 .container .input-size .inputs-botoes {
