--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 *{
     font-family: sans-serif;
+    margin: 0;
+}
+
+label{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+input{
+    margin-bottom: 5px;
 }
