--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -1,3 +1,9 @@
-div{
-    background-color: red;
-}
+* {
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    background: rgb(135, 172, 182);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
