--- a/src/app/country/components/country-form/country-form.component.html
+++ b/src/app/country/components/country-form/country-form.component.html
@@ -2,7 +2,7 @@
     <form action="#" #form>
             <div class="input-name">
                 <label for="txtName">Nome</label>
-                <input type="text" id="txtName" name="txtName" [(ngModel)]="country.name">
+                <input type="text" id="txtName" name="txtName" [(ngModel)]="country.name" placeholder="País">
                 <button class="filtrar" (click)="getCountryByName()"><img src="../../../../assets/64673.png" width="15px"></button>
                 <hr>
             </div>
