--- a/src/app/user/components/user-form/user-form.component.html
+++ b/src/app/user/components/user-form/user-form.component.html
@@ -9,6 +9,7 @@
                 <hr>
                 <label for="txtEmail">Email</label>
                 <input type="text" id="txtEmail" name="txtEmail" [(ngModel)]="user.email">
+                <button class="filtrar" (click)="getUserByEmail()"><img src="../../../../assets/64673.png" width="15px"></button>
             </div>
             <div class="input-permissao">
                 <hr>
