--- a/src/app/user/components/user-form/user-form.component.scss
+++ b/src/app/user/components/user-form/user-form.component.scss
@@ -28,7 +28,7 @@
     cursor: pointer;
 }
 
-.input-name button {
+.input-name button, .input-email button{
     background-color: transparent;
     border: none;
     cursor: pointer;
